Small changes on Collections1