@@ -3,6 +3,7 @@ package it.unibo.oop.lab.collections1;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.LinkedList;
+import java.util.List;
 import java.util.Map;
 
 /**
@@ -14,7 +15,16 @@ public final class UseCollection {
 	private static final int TIMES = 1_000;
 	private static final int ELEMS = 100_000;
     private static final int TO_MS = 1_000_000;
+    private static final int START = 1_000;
+    private static final int END = 2_000;
 	
+    private static final long AFRICA_POPULATION = 1_110_635_000L;
+    private static final long AMERICAS_POPULATION = 972_005_000L;
+    private static final long ANTARCTICA_POPULATION = 0L;
+    private static final long ASIA_POPULATION = 4_298_723_000L;
+    private static final long EUROPE_POPULATION = 742_452_000L;
+    private static final long OCEANIA_POPULATION = 38_304_000L;
+    
     private UseCollection() {
     }
 
@@ -27,8 +37,8 @@ public final class UseCollection {
          * 1) Create a new ArrayList<Integer>, and populate it with the numbers
          * from 1000 (included) to 2000 (excluded).
          */
-    	final var array = new ArrayList<Integer>();
-    	for(int i=1_000; i<2_000; i++) {
+    	final List<Integer> array = new ArrayList<Integer>();
+    	for(int i=START; i<END; i++) {
     		array.add(i);
     	}
         /*
@@ -37,13 +47,14 @@ public final class UseCollection {
          * the same contents of the list of point 1.
          */
     	var array2 = new LinkedList<Integer>(array);
+    	System.out.println(array2);
         /*
          * 3) Using "set" and "get" and "size" methods, swap the first and last
          * element of the first list. You can not use any "magic number".
          * (Suggestion: use a temporary variable)
          */
-    	int temp = array2.get(array2.size() - 1);
-    	array2.set(array2.size() - 1, array2.getFirst());
+    	final int temp = array2.get(array2.size() - 1);
+    	array2.set(array2.size() - 1, array2.get(0));
     	array2.set(0, temp);
     	
         /*
@@ -130,12 +141,12 @@ public final class UseCollection {
          * Oceania -> 38,304,000
          */
     	final Map<String,Long> continents = new HashMap<>();
-    	continents.put("Africa",1_110_635_000L);
-    	continents.put("Americas",972_005_000L);
-    	continents.put("Antartica",0L);
-    	continents.put("Asia",4_298_723_000L);
-    	continents.put("Europe",742_452_000L);
-    	continents.put("Oceania",38_304_000L);
+    	continents.put("Africa", AFRICA_POPULATION);
+    	continents.put("Americas", AMERICAS_POPULATION);
+    	continents.put("Antarctica", ANTARCTICA_POPULATION);
+    	continents.put("Asia", ASIA_POPULATION);
+    	continents.put("Europe", EUROPE_POPULATION);
+    	continents.put("Oceania", OCEANIA_POPULATION);
         /*
          * 8) Compute the population of the world
          */
